# cgfoil

./: .gitignore  README.md  admin.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  airfoil_mesh.yaml  airfoil_sections.vtp  example.py  example_list.py  example_list_web.py  example_list_web2.py  example_m2.py  example_vtp_multi_ply.py  example_vtp_multi_section.py  example_vtp_section.py  yaml_example.py
src/cgfoil/: __init__.py  cli.py  models.py
src/cgfoil/cli/: __init__.py  cli.py  export.py  full.py  mesh.py  plot.py  run.py  summary.py
src/cgfoil/core/: __init__.py  anba.py  main.py  mesh.py  normals.py  offset.py  trim.py  vtk.py
src/cgfoil/utils/: __init__.py  geometry.py  io.py  logger.py  plot.py  summary.py
tests/: __init__.py  airfoil_mesh.yaml  test_basic.py  test_cli.py  test_examples.py  test_export.py  test_validation.py  test_vtk.py
