[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgfoil"
version = "0.1.1"
description = "CGAL-based airfoil meshing tool"
authors = [{name = "wr1", email = "8971152+wr1@users.noreply.github.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["airfoil", "meshing", "cgal", "delaunay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pydantic",
    "pyvista",
    "CGAL",
    "rich",
    "treeparse",
    "scipy",
    "pandas",
]
scripts = { "cgfoil" = "cgfoil.cli.cli:main" }

[project.optional-dependencies]
dev = ["pytest-cov"]

[project.urls]
Homepage = "https://github.com/wr1/cgfoil"
Repository = "https://github.com/wr1/cgfoil"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=cgfoil --cov-report=term-missing"
