[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgfoil"
version = "0.1.2"
description = "CGAL-based airfoil meshing package"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pydantic",
    "pyvista",
    "rich",
    "treeparse",
    "pandas",
    "pyyaml",
]

[project.scripts]
cgfoil = "cgfoil.cli.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
